--- a/Teardown/README
+++ b/Teardown/README
@@ -1,1 +1,6 @@
 These are the teardown steps I have followed from the guide I found on youtube.
+
+Each video is meant to be insightfully titled and numbered in order of which steps I followed.
+Example:
+   [Title]                   [Video #]
+ FeetRemoval         -         01
